--- a/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
@@ -51,10 +51,10 @@
                     <td>@entity.ProductsCount</td>
                     <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                     <td>
-                        @entity.Sender.Name
+                        @entity.SenderInfo.Name
                         @if (!imperonatingId.HasValue)
                         {
-                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Sender.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.ClientId }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
                                 <button type="submit" class="btn btn-info">
                                     <i class="fa fa-user-secret"></i>
@@ -63,10 +63,10 @@
                         }
                     </td>
                     <td>
-                        @entity.Vendor.Name
+                        @entity.VendorInfo.Name
                         @if (!imperonatingId.HasValue)
                         {
-                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Vendor.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.ProducerId }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
                                 <button type="submit" class="btn btn-info">
                                     <i class="fa fa-user-secret"></i>
