--- a/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
@@ -74,7 +74,7 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var product in Model.Products)
+    @foreach (var product in Model.ProductsToDeliver)
     {
         <tr >
             <td style="padding: 10px 15px;vertical-align: center;">@product.Name</td>
