--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -96,7 +96,7 @@
         @foreach (var returnable in item.Returnables)
         {
             <tr >
-                <td style="padding: 10px 15px;vertical-align: center;">@returnable.Name</td>
+                <td style="padding: 10px 15px;vertical-align: center;">Consigne - @returnable.Name</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.Quantity</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.WholeSalePrice</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.Vat</td>
@@ -124,13 +124,10 @@
 
             if (Model.ReturnablesDiffs.Any(p => p.RowKind == @productGrouping.Key))
             {
-                <tr style="padding: 10px 15px;text-align: left;">
-                    <th colspan="5" style="padding:15px 5px;">Consignes @productGrouping.Key.ToEnumString()es</th>
-                </tr>
                 @foreach (var returnable in Model.ReturnablesDiffs.Where(p => p.RowKind == @productGrouping.Key))
                 {
                     <tr>
-                        <td style="padding: 10px 15px;vertical-align: center;">@returnable.Name</td>
+                        <td style="padding: 10px 15px;vertical-align: center;">Consigne - @returnable.Name</td>
                         <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.Quantity</td>
                         <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.WholeSalePrice</td>
                         <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@returnable.Vat</td>
