Fix - Rewording des purchase orders

--- a/Sheaft.Mailing/Templates/PurchaseOrderAcceptedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/PurchaseOrderAcceptedEvent.cshtml
@@ -160,7 +160,7 @@
                                                                             <div>
                                                                                 <div style="font-family: inherit; text-align: center">Votre commande d'un montant de @(Model.TotalOnSalePrice)€ pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a bien été acceptée par @Model.VendorName.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
-                                                                                <div style="font-family: inherit; text-align: center">Nous vous informerons par e-mail lorsque celle-ci sera prête à récupérer.</div><div></div>
+                                                                                <div style="font-family: inherit; text-align: center">Nous vous informerons par e-mail lorsque celle-ci sera prête.</div><div></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
