--- a/Sheaft.Mailing/Templates/PurchaseOrderCompletedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/PurchaseOrderCompletedEvent.cshtml
@@ -1,4 +1,5 @@
-﻿@model Sheaft.Mailing.PurchaseOrderMailerModel
+﻿@using Sheaft.Domain.Enum
+@model Sheaft.Mailing.PurchaseOrderMailerModel
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
@@ -128,7 +129,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>Ca y est ! Votre commande de @(Model.TotalOnSalePrice)€ passée à @Model.VendorName est prête à être récupérée.</p>
+                                                                        <p>Ca y est ! Votre commande de @(Model.TotalOnSalePrice)€ passée à @Model.VendorName est prête.</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="2bd7ba50-1bc4-49e2-a039-cfa223a2cb4e">
@@ -160,7 +161,15 @@
                                                                             <div>
                                                                                 <div style="font-family: inherit; text-align: center">Votre commande de @(Model.TotalOnSalePrice)€ passée à @Model.VendorName est prête !</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
-                                                                                <div style="font-family: inherit; text-align: center">Vous pourrez passer la récupérer le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") entre @(Model.ExpectedFrom.ToString(@"hh\hmm")) et @(Model.ExpectedTo.ToString(@"hh\hmm")) au @Model.Address</div><div></div>
+                                                                                @if (Model.ClientKind == ProfileKind.Store)
+                                                                                {
+                                                                                    <div style="font-family: inherit; text-align: center">Vous serez normalement livré (sauf si décalage par le producteur) le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") entre @(Model.ExpectedFrom.ToString(@"hh\hmm")) et @(Model.ExpectedTo.ToString(@"hh\hmm")) au @Model.Address</div>
+                                                                                    <div></div>
+                                                                                }
+                                                                                else{
+                                                                                    <div style="font-family: inherit; text-align: center">Vous pourrez passer la récupérer le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") entre @(Model.ExpectedFrom.ToString(@"hh\hmm")) et @(Model.ExpectedTo.ToString(@"hh\hmm")) au @Model.Address</div>
+                                                                                    <div></div>
+                                                                                }
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -173,7 +182,7 @@
                                                                                 <tbody>
                                                                                     <tr>
                                                                                         <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                            <a href="@Model.PurchaseOrderUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Voir ma commande sur le site</a>
+                                                                                            <a href="@Model.PurchaseOrderUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Voir ma commande</a>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </tbody>
