--- a/Sheaft.Mailing/Templates/OrderConfirmedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/OrderConfirmedEvent.cshtml
@@ -231,6 +231,38 @@
                                                         }
 
                                                         <br/>
+                                                        @if (Model.SenderKind == ProfileKind.Consumer)
+                                                        {
+                                                            <table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="ad25904a-c958-4304-bcfa-2e46bbd0b83f">
+                                                                <tbody>
+                                                                <tr>
+                                                                    <td align="center" bgcolor="" class="outer-td" style="padding:0px 0px 0px 0px;">
+                                                                        <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
+                                                                            <tbody>
+                                                                            <tr>
+                                                                                <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
+                                                                                    @if (Model.Donation > 0)
+                                                                                    {
+                                                                                        <strong>Vous avez choisi de donner @Model.Donation€ à Sheaft pour soutenir la consommation locale, et nous vous en remercions.</strong>
+                                                                                    }
+                                                                                    <br/>
+                                                                                    <br/>
+                                                                                    <p>Pour information, les frais bancaires liés à ce paiement s'élèvent à @Model.Fees€ TTC.</p>
+                                                                                    <br/>
+                                                                                    <p>Si vous aviez utilisé une plateforme concurrente, vous auriez payé @(Math.Round((Model.TotalPrice - Model.Donation) * 0.20m, 2))€ de plus (pour une plateforme appliquant 20% de marge sur le prix de vente des producteurs).</p>
+
+                                                                                    <br/>
+                                                                                    <br/>
+                                                                                </td>
+                                                                            </tr>
+                                                                            </tbody>
+                                                                        </table>
+                                                                    </td>
+                                                                </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        }
+
                                                         <table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="ad25904a-c958-4304-bcfa-2e46bbd0b83f">
                                                             <tbody>
                                                             <tr>
@@ -239,36 +271,7 @@
                                                                         <tbody>
                                                                         <tr>
                                                                             <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                @if (Model.Donation > 0)
-                                                                                {
-                                                                                    <strong>Vous avez choisi de donner @Model.Donation€ à Sheaft pour soutenir la consommation locale, et nous vous en remercions.</strong>
-                                                                                }
-                                                                                <br/>
-                                                                                <br/>
-                                                                                <p>Pour information, les frais bancaires liés à ce paiement s'élèvent à @Model.Fees€ TTC.</p>
-                                                                                <br/>
-                                                                                <p>Si vous aviez utilisé une plateforme concurrente, vous auriez payé @(Math.Round((Model.TotalPrice - Model.Donation) * 0.20m, 2))€ de plus (pour une plateforme appliquant 20% de marge sur le prix de vente des producteurs).</p>
-
-                                                                                <br/>
-                                                                                <br/>
-                                                                            </td>
-                                                                        </tr>
-                                                                        </tbody>
-                                                                    </table>
-                                                                </td>
-                                                            </tr>
-                                                            </tbody>
-                                                        </table>
-
-                                                        <table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="ad25904a-c958-4304-bcfa-2e46bbd0b83f">
-                                                            <tbody>
-                                                            <tr>
-                                                                <td align="center" bgcolor="" class="outer-td" style="padding:0px 0px 0px 0px;">
-                                                                    <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
-                                                                        <tbody>
-                                                                        <tr>
-                                                                            <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                <a href="@Model.MyOrdersUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">@(Model.Producers.Count() > 1 ? "Suivre les commandes" : "Suivre la commande")</a>
+                                                                                <a href="@Model.MyOrdersUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">@(Model.Producers.Count() > 1 ? "Suivre mes commandes" : "Suivre ma commande")</a>
                                                                                 <br/>
                                                                                 <br/>
                                                                             </td>
