New - Ajout d'un lien vers le batch parent et ajout du producer sur delivery

--- a/Sheaft.Mailing/Templates/DeliveryFormGeneratedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryFormGeneratedEvent.cshtml
@@ -168,7 +168,7 @@
                                                                     <div>
                                                                         <p>Bonjour @Model.Firstname,</p>
                                                                         <br/>
-                                                                        <p>@Model.ProducerName à valider la livraison de votre commande le @Model.DeliveredOn.Value.ToString("dd/MM/yyyy"). Vous pouvez télécharger votre bon de livraison en cliquant sur le bouton ci-dessous.</p>
+                                                                        <p>@Model.ProducerName a validé la livraison du @Model.DeliveredOn.Value.ToString("dd/MM/yyyy"). Vous pouvez télécharger votre bon de livraison en cliquant sur le bouton ci-dessous.</p>
                                                                     </div>
                                                                 </td>
                                                             </tr>
