--- a/Sheaft.Web.Manage/Views/Dashboard/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Dashboard/Index.cshtml
@@ -104,6 +104,20 @@
             <a asp-controller="purchaseOrders" asp-action="index" class="card-link">Show</a>
         </div>
     </div>
+    @*<div class="card w-25 d-inline-block">
+        <div class="card-body">
+            <h5 class="card-title">DeliveryBatches</h5>
+            <h6 class="card-subtitle mb-2 text-muted">@ViewBag.DeliveryBatches</h6>
+            <a asp-controller="DeliveryBatches" asp-action="index" class="card-link">Show</a>
+        </div>
+    </div>*@
+    <div class="card w-25 d-inline-block">
+        <div class="card-body">
+            <h5 class="card-title">Deliveries</h5>
+            <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Deliveries</h6>
+            <a asp-controller="Deliveries" asp-action="index" class="card-link">Show</a>
+        </div>
+    </div>
     <div class="card w-25 d-inline-block">
         <div class="card-body">
             <h5 class="card-title">Jobs</h5>
